tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__ChemicalDehydrat-AAAAAAAAAAAAAAAAAAAGTg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1614,
  "prerequisites": [
    897
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Dehydrate your grapes to raisins. Or make some Styrene, Benzene or Ethylene at MV. Either way, this device is a nice to have.\n\nIt also does the Drying Rack recipes as well.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lChemical Dehydrator",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    897
  ],
  "rewards": [],
  "tasks": []
}
