tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__Conduits-AAAAAAAAAAAAAAAAAAAAhg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 134,
  "prerequisites": [
    128,
    1598
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Probably the most awesome way to transport just about anything in multiple different ways. Get some conduits of each type. Higher tiers of each (except item) exist.\n\n[note]There's also ME conduits for when you can do that.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lConduits",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    128,
    1598
  ],
  "rewards": [],
  "tasks": []
}
