tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__Coolant-AAAAAAAAAAAAAAAAAAAMAQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3073,
  "prerequisites": [
    751,
    3071
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Make your first coolant out of water or distilled water and lapis dust in an MV mixer.\n\nUsing distilled water lets you save on lapis while also speeding up the process by a lot.\n\n[note]If you don't use distilled water, you will need a lot more than 8 lapis dust.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lCoolant",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    751,
    3071
  ],
  "rewards": [],
  "tasks": []
}
