tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__DarkSteelPipes-AAAAAAAAAAAAAAAAAAADuQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 953,
  "prerequisites": [
    138
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Dark steel pipes are much better than the bronze, steel, or potin pipes you might have been using. Make sure your wrench can handle mining level 3 or you can't deconstruct them.\n\n[note]If you don't need these, just recycle them to get the materials back. Not everything needs ginormous pipes or high heat tolerance.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lDark Steel Pipes",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    138
  ],
  "rewards": [],
  "tasks": []
}
