tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__DidYouRunLowOnGo-AAAAAAAAAAAAAAAAAAAERQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1093,
  "prerequisites": [
    1322
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Did you run low on redstone and/or gold? It's no problem with a glowstone flower farm. You can centrifuge glowstone dust to redstone and gold dust. Redstone is also a good source of chrome. You'll need tons of gold for HV, so it's a good idea to set this up before then.\n\n[note]There are actually a couple plants that produce glowstone, pick the one you like![/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lDid You Run Low On Gold or Redstone?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1322
  ],
  "rewards": [],
  "tasks": []
}
